relay-pii/src/snapshots/relay_pii__convert__tests__authorization_scrubbing.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "extra": {
    "auXth": "foobar",
    "auth": "[Filtered]",
    "authorization": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "auth": {
        "": {
          "rem": [
            [
              "@password:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 6
        }
      },
      "authorization": {
        "": {
          "rem": [
            [
              "@password:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 6
        }
      }
    }
  }
}
