relay-pii/src/snapshots/relay_pii__convert__tests__bearer_tokens_scrubbed.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "threads": {
    "values": [
      {
        "stacktrace": {
          "frames": [
            {
              "vars": {
                "request": {
                  "headers": [
                    [
                      "[Filtered]",
                      "[Filtered]"
                    ]
                  ]
                }
              }
            }
          ]
        }
      }
    ]
  },
  "_meta": {
    "threads": {
      "values": {
        "0": {
          "stacktrace": {
            "frames": {
              "0": {
                "vars": {
                  "request": {
                    "headers": {
                      "0": {
                        "0": {
                          "": {
                            "rem": [
                              [
                                "@password:filter",
                                "s",
                                0,
                                10
                              ]
                            ],
                            "len": 9
                          }
                        },
                        "1": {
                          "": {
                            "rem": [
                              [
                                "@password:filter",
                                "s",
                                0,
                                10
                              ]
                            ],
                            "len": 42
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}
