relay-pii/src/snapshots/relay_pii__convert__tests__breadcrumb_message-2.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "breadcrumbs": {
    "values": [
      {
        "message": "SELECT session_key FROM django_session WHERE session_key = 'abcdefg'"
      }
    ]
  }
}
