relay-pii/src/snapshots/relay_pii__convert__tests__contexts.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "contexts": {
    "app": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "otp": "otp_code",
      "password": "hello",
      "the_secret": "hello",
      "two-factor": "otp_code",
      "two_factor": "otp_code",
      "type": "app"
    },
    "biz": {
      "a_password_here": "[Filtered]",
      "apiKey": "[Filtered]",
      "api_key": "[Filtered]",
      "foo": "bar",
      "otp": "[Filtered]",
      "password": "[Filtered]",
      "the_secret": "[Filtered]",
      "two-factor": "[Filtered]",
      "two_factor": "[Filtered]",
      "type": "biz"
    },
    "browser": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "otp": "otp_code",
      "password": "hello",
      "the_secret": "hello",
      "two-factor": "otp_code",
      "two_factor": "otp_code",
      "type": "browser"
    },
    "device": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "otp": "otp_code",
      "password": "hello",
      "the_secret": "hello",
      "two-factor": "otp_code",
      "two_factor": "otp_code",
      "type": "device"
    },
    "gpu": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "otp": "otp_code",
      "password": "hello",
      "the_secret": "hello",
      "two-factor": "otp_code",
      "two_factor": "otp_code",
      "type": "gpu"
    },
    "monitor": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "otp": "otp_code",
      "password": "hello",
      "the_secret": "hello",
      "two-factor": "otp_code",
      "two_factor": "otp_code",
      "type": "monitor"
    },
    "os": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "otp": "otp_code",
      "password": "hello",
      "the_secret": "hello",
      "two-factor": "otp_code",
      "two_factor": "otp_code",
      "type": "os"
    },
    "runtime": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "otp": "otp_code",
      "password": "hello",
      "the_secret": "hello",
      "two-factor": "otp_code",
      "two_factor": "otp_code",
      "type": "runtime"
    },
    "secret": null,
    "trace": {
      "a_password_here": "hello",
      "apiKey": "secret_key",
      "api_key": "secret_key",
      "foo": "bar",
      "otp": "otp_code",
      "password": "hello",
      "the_secret": "hello",
      "two-factor": "otp_code",
      "two_factor": "otp_code",
      "type": "trace"
    }
  },
  "_meta": {
    "contexts": {
      "biz": {
        "a_password_here": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 5
          }
        },
        "apiKey": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 10
          }
        },
        "api_key": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 10
          }
        },
        "otp": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 8
          }
        },
        "password": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 5
          }
        },
        "the_secret": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 5
          }
        },
        "two-factor": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 8
          }
        },
        "two_factor": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 8
          }
        }
      },
      "secret": {
        "": {
          "rem": [
            [
              "@password:filter",
              "x"
            ]
          ]
        }
      }
    }
  }
}
