relay-pii/src/snapshots/relay_pii__convert__tests__csp_blocked_uri.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "csp": {
    "blocked_uri": "https://example.com/?foo=[Filtered]&bar=baz"
  },
  "_meta": {
    "csp": {
      "blocked_uri": {
        "": {
          "rem": [
            [
              "@creditcard:filter",
              "s",
              25,
              35
            ]
          ],
          "len": 49
        }
      }
    }
  }
}
