relay-pii/src/snapshots/relay_pii__convert__tests__debug_meta_files_not_strippable.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "debug_meta": {
    "images": [
      {
        "code_file": "foo/bar.txt",
        "debug_file": "foo/bar.txt",
        "type": "macho"
      }
    ]
  }
}
