relay-pii/src/snapshots/relay_pii__convert__tests__does_sanitize_encrypted_private_key.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "extra": {
    "s": "\"\"-----BEGIN ENCRYPTED PRIVATE KEY-----\n[Filtered]\n-----END ENCRYPTED PRIVATE KEY-----\"\""
  },
  "_meta": {
    "extra": {
      "s": {
        "": {
          "rem": [
            [
              "@pemkey:filter",
              "s",
              40,
              50
            ]
          ],
          "len": 277
        }
      }
    }
  }
}
