relay-pii/src/snapshots/relay_pii__convert__tests__does_sanitize_private_key.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "extra": {
    "s": "\"\"-----BEGIN PRIVATE KEY-----\n[Filtered]\n-----END PRIVATE KEY-----\"\""
  },
  "_meta": {
    "extra": {
      "s": {
        "": {
          "rem": [
            [
              "@pemkey:filter",
              "s",
              30,
              40
            ]
          ],
          "len": 252
        }
      }
    }
  }
}
