relay-pii/src/snapshots/relay_pii__convert__tests__does_sanitize_rsa_private_key.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "extra": {
    "s": "\"\"-----BEGIN RSA PRIVATE KEY-----\n[Filtered]\n-----END RSA PRIVATE KEY-----\"\""
  },
  "_meta": {
    "extra": {
      "s": {
        "": {
          "rem": [
            [
              "@pemkey:filter",
              "s",
              34,
              44
            ]
          ],
          "len": 260
        }
      }
    }
  }
}
