relay-pii/src/snapshots/relay_pii__convert__tests__does_sanitize_social_security_number.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "extra": {
    "s": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "s": {
        "": {
          "rem": [
            [
              "@usssn:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 11
        }
      }
    }
  }
}
